# mixplayer

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
src/: DiscLabel.cpp  DiscLabel.h  main.cpp
